--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,26 @@
 /* Main styles */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&Roboto:300');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&Roboto:300");
 
 /* Variables */
 
 :root {
-  --color-win: #78CF82;
-  --color-lose: #D94545;
+  --color-win: #78cf82;
+  --color-lose: #d94545;
   --color-start: #5b85b7;
   --color-neutral: #445069;
-  --color-neutral-light: #D2D2D2;
-  --color-keys: #37474F;
-  --color-keys-light: #E5E5E5;
+  --color-neutral-light: #d2d2d2;
+  --color-keys: #37474f;
+  --color-keys-light: #e5e5e5;
   --font-size-large: 60px;
   --font-size-medium: 20px;
-  --transition: all .2s ease-in-out;
+  --transition: all 0.2s ease-in-out;
 }
 
 /* main */
 
 * {
   box-sizing: border-box;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
@@ -30,7 +30,9 @@ body {
   height: 100vh;
 }
 
-li, ol, ul {
+li,
+ol,
+ul {
   padding: 0;
   display: inline-block;
 }
@@ -46,10 +48,11 @@ h1 {
   font-size: 30px;
 }
 
-button, input[type=submit] {
+button,
+input[type="submit"] {
   margin: 6px;
   border: 1px solid transparent;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   color: var(--color-keys);
   font-size: var(--font-size-medium);
   background-color: var(--color-keys-light);
@@ -59,10 +62,10 @@ button, input[type=submit] {
   transition: var(--transition);
   cursor: pointer;
 }
-input[type=submit].incorrect {
+input[type="submit"].incorrect {
   background-color: var(--color-lose);
 }
-input[type=submit].correct {
+input[type="submit"].correct {
   background-color: var(--color-win);
 }
 button.correct {
@@ -73,8 +76,8 @@ button.incorrect {
 }
 
 #btn__reset {
-	width: 200px;
-	margin: 0 auto;
+  width: 200px;
+  margin: 0 auto;
 }
 
 .main-container {
@@ -91,7 +94,11 @@ button.incorrect {
   padding: 10px;
 }
 
-#phrase ul li{
+#phrase {
+  background-color: #686d79;
+}
+
+#phrase ul li {
   margin-top: 15px;
 }
 
@@ -100,7 +107,6 @@ button.incorrect {
 .header {
   color: #3a3f58;
 }
-
 
 /* Phrase */
 
@@ -132,28 +138,41 @@ button.incorrect {
   padding: 20px 1px 0 1px;
   margin-right: 2px;
   border-radius: 5px;
-  -webkit-animation-duration: .5s;
-  animation-duration: .5s;
+  -webkit-animation-duration: 0.5s;
+  animation-duration: 0.5s;
 }
 
-
 /* Keyboard */
+
+.keyboard {
+  background-color: #37474f;
+  border: 1px green;
+  width: auto;
+}
 
 .keyrow {
   display: flex;
   justify-content: center;
 }
 
+.key:hover {
+  opacity: 0.8;
+}
+
+.final-msg {
+  color: white;
+}
+
 .chosen {
   background: #3a3f58;
   border-radius: 5px;
   font-size: var(--font-size-medium);
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .wrong {
   background: #f7a964;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .btn__reset {
@@ -163,8 +182,8 @@ button.incorrect {
   border-radius: 5px;
   font-size: 20px;
   cursor: pointer;
-  border-bottom: solid 4px rgba(0, 0, 0, .3);
-  border-right: solid 3px rgba(0, 0, 0, .3)
+  border-bottom: solid 4px rgba(0, 0, 0, 0.3);
+  border-right: solid 3px rgba(0, 0, 0, 0.3);
 }
 
 .btn__reset:active {
@@ -179,8 +198,8 @@ button.incorrect {
   border-radius: 5px;
   font-size: 20px;
   cursor: pointer;
-  border-bottom: solid 4px rgba(0, 0, 0, .3);
-  border-right: solid 3px rgba(0, 0, 0, .3)
+  border-bottom: solid 4px rgba(0, 0, 0, 0.3);
+  border-right: solid 3px rgba(0, 0, 0, 0.3);
 }
 
 .btn-start-again:active {
@@ -189,14 +208,13 @@ button.incorrect {
   border-right: solid 3px rgba(0, 0, 0, 0);
 }
 
-
 /* Overlay */
 
 #overlay {
   display: flex;
   flex-direction: column;
   position: fixed;
-  color: #FFFFFF;
+  color: #ffffff;
   justify-content: center;
   top: 0;
   bottom: 0;
@@ -206,7 +224,7 @@ button.incorrect {
 }
 
 .title {
-  color: #FFF;
+  color: #fff;
 }
 
 .start {
